tests/golden/compile-pass/module_use_alias.rua
mod math {
    pub fn value() -> i64 {
        7
    }
}

use math::value as answer;

fn main() {
    let value = answer();
}
