tests/golden/compile-fail/module_import_private.rua
mod secrets {
    fn value() -> i64 { 42 }
}

use secrets::value;

fn main() {}
